[package]
name = "regex-split"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/archer884/regex-split"
documentation = "https://docs.rs/regex-split"
homepage = "https://github.com/archer884/regex-split"
description = """
An implementation of split_inclusive for the regex crate.
"""
categories = ["text-processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
